jupyterlab-proxy/k8s/jpylab-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: jpylabproxy-deployment
 labels:
  app: jpylabproxy
spec:
 replicas: 1
 selector:
  matchLabels:
   app: jpylabproxy
 template:
  metadata:
   labels:
    app: jpylabproxy
  spec:
   containers:
   - name: jpylabproxy
     image: zhangshuiyong/jpylabproxy:latest
     ports:
     - containerPort: 8080
