jupyterlab-proxy/k8s/jpylabproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: jpylabproxy-service
 labels:
  app: jpylabproxy-service
spec:
 selector:
  app: jpylabproxy
 ports:
 - name: jpylabproxy
   port: 80
   targetPort: 8080
